@@ -70,7 +70,6 @@ var Server = {
         }
         chan.dead = true;
     },
-    stats: null,
     app: null,
     io: null,
     httpserv: null,
@@ -98,7 +97,6 @@ var Server = {
     },
     handleIOConnection: function (socket) {
         var self = this;
-        self.stats.record("socketio", "socket");
         var ip = getSocketIP(socket);
         socket._ip = ip;
         self.db.isGlobalIPBanned(ip, function (err, bant) {
@@ -149,7 +147,6 @@ var Server = {
                 res.redirect("/" + c);
             }
             else {
-                self.stats.record("http", "/r/" + c);
                 self.logHTTP(req);
                 res.sendfile("channel.html", {
                     root: path.join(__dirname, "../www")
@@ -162,7 +159,6 @@ var Server = {
 
         self.app.get("/", function (req, res, next) {
             self.logHTTP(req);
-            self.stats.record("http", "/");
             res.sendfile("index.html", {
                 root: path.join(__dirname, "../www")
             });
@@ -193,7 +189,6 @@ var Server = {
                     }
                 }
                 else {
-                    self.stats.record("http", req.params.thing);
                     self.logHTTP(req);
                 }
             });
@@ -247,7 +242,7 @@ var Server = {
         self.acp = require("./acp")(self);
 
         // init stats
-        self.stats = require("./stats")(self);
+        require("./stats")(self);
 
         // init media retriever
         self.infogetter = require("./get-info")(self);
