@@ -1,3 +1,8 @@
+Thu Sep 26 23:08 2013 CDT
+    * lib/acp.js, lib/api.js, lib/server.js, lib/stats.js, www/acp.html,
+      www/assets/js/acp.js: Remove the [realtime] 'connection stats'
+      tracking that was pretty worthless anyways.
+
 Thu Sep 26 21:42 2013 CDT
     * www/assets/js/player.js: Keep track of the duration of the current
       video and use this information to prevent the player restarting when
